[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/BG/bg_BotMenu.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Button/PlayButton0.png" type="Texture" id=2]
[ext_resource path="res://PlayButton.gd" type="Script" id=3]
[ext_resource path="res://Font/ARIALBD.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[node name="MainMenu" type="Node"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -19.0401
margin_right = 1920.0
margin_bottom = 1060.96
rect_scale = Vector2( 0.71, 0.7 )
texture = ExtResource( 1 )

[node name="PlayButton" type="Button" parent="."]
margin_left = 518.033
margin_top = 302.186
margin_right = 886.033
margin_bottom = 663.186
rect_pivot_offset = Vector2( 178, 178 )
icon = ExtResource( 2 )
flat = true
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 855.886
margin_top = 640.973
margin_right = 1265.89
margin_bottom = 691.973
custom_fonts/font = SubResource( 1 )
text = "This demo was made by Adderly Cespedes
visit: Youtube.com/Adderly2dd"

[node name="Label2" type="Label" parent="."]
margin_left = 855.886
margin_top = 691.973
margin_right = 1265.89
margin_bottom = 742.973
custom_fonts/font = SubResource( 1 )
text = "www.2ddEntertainment.com/LBB"
[connection signal="mouse_entered" from="PlayButton" to="PlayButton" method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="PlayButton" method="_on_PlayButton_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="PlayButton" method="_on_PlayButton_pressed"]
